--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Capy';
+  src: url('./assets/Capy-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
