--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
 }
 
 @font-face {
-  font-family: 'Typewriter';
-  src: url('./assets/AmericanTypewriter.ttf') format('truetype');
+  font-family: 'American Typewriter';
+  src: url('./assets/AmericanTypewriter.ttc') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @keyframes crawl-in {
